--- a/Water/FinalWater.html
+++ b/Water/FinalWater.html
@@ -335,7 +335,7 @@
       vec4 reflectColor = textureCube( aurCube, vec3( -reflection.x, reflection.yz ) );
       vec4 refractColor = textureCube( aurCube, refraction );
       //gl_FragColor = vec4(fv, fv, fv, 1.0);
-      gl_FragColor = reflectColor * fv + refractColor * (1.0 - fv);
+      gl_FragColor = mix(reflectColor * fv + refractColor * (1.0 - fv), texture2D(seaTex, vUv), 0.2);
       //gl_FragColor = reflectColor;
 		}
     </script>
@@ -384,7 +384,7 @@ function init() {
   camera.position.z = 2.0;
   
   cubeCamera = new THREE.CubeCamera(1, 10000, 512);
-  cubeCamera.position.set(0, 130, 0);
+  cubeCamera.position.set(0, 10, 0);
   bufferScene.add(cubeCamera);
 	
 	bufferCamera = new THREE.PerspectiveCamera( 60.0, window.innerWidth / window.innerHeight, 0.1, 2000 );
