Changed camera view
This will improve aurora perspective.

--- a/Water/FinalWater.html
+++ b/Water/FinalWater.html
@@ -393,8 +393,8 @@ function init() {
 	var controls = new THREE.OrbitControls( bufferCamera );
 	bufferCamera.position.z = 175;
 	bufferCamera.position.y = 20;
-	bufferCamera.position.x = -41;
-	bufferCamera.rotation.x = 0.23;
+	bufferCamera.position.x = -20;
+	//bufferCamera.rotation.x = 0.23;
 	bufferCamera.translateZ(10.0);
 	controls.update();
 
