--- a/Water/FinalWater.html
+++ b/Water/FinalWater.html
@@ -56,17 +56,26 @@
         //////////////////////
         // utility functions
 
-        mat2 mm2(in float a){float c = cos(a), s = sin(a);return mat2(c,s,-s,c);}
+	//used in triNoise2() and main()
+	//returns 2x2 matrix 
+        mat2 mm2(in float a){float c = cos(a), s = sin(a);return mat2(c,s,-s,c);} 
+	
+	//used in tri2() and triNoise2D()
+	//
+        float tri(in float x){return clamp(abs(fract(x)-.5),0.01,0.49);} 
+	
+	//calls tri(), used in triNoise2D
+        vec2 tri2(in vec2 p){return vec2(tri(p.x)+tri(p.y),tri(p.y+tri(p.x)));} 
+	
+	///////////
+        //constant variables
+        mat2 m2 = mat2(0.95534, 0.29552, -0.29552, 0.95534); //used in triNoise2D()
 
-        //variables
-        mat2 m2 = mat2(0.95534, 0.29552, -0.29552, 0.95534);
-        float tri(in float x){return clamp(abs(fract(x)-.5),0.01,0.49);}
-        vec2 tri2(in vec2 p){return vec2(tri(p.x)+tri(p.y),tri(p.y+tri(p.x)));}
 
         ///////////
         // TRI NOISE 2D
 
-        float triNoise2d(in vec2 p, float spd){
+        float triNoise2d(in vec2 p, float spd){ //p = ?, spd = constant val
             float z=1.8;
             float z2=2.5;
             float rz = 0.;
@@ -88,11 +97,6 @@
             }
             return clamp(1./pow(rz*29., 1.3),0.,.55);
         }
-
-        /////////////
-        /// HASH21
-
-        //float hash21(in vec2 n){ return fract(sin(dot(n, vec2(13, 4))) * 4400.); }
 
         ///////////////
         // AURORA - calc color of aurora at this location
